app/pb_kits/playbook/packs/site_styles/_site-style.scss
@import "../../tokens/colors";
@import "../../tokens/spacing";
@import "../../tokens/screen_sizes";
@import "../../tokens/border_radius";
@import "../../tokens/shadows";

$selector: ".pb--page";

body {
  overflow-x: hidden;
}

.pb--page {
  &--topNav {
    flex: 0 0;
    padding: 14px 30px 0 30px;
    background: $white;
    h1 {
      display: flex;
      align-items: center;
      img {
        display: flex;
      }
    }
    &.dark{
    background: tint(#0a0527, 10);
    }
    .mobile-popover-nav {
      display: none;
    }
    @include break_at(breakpoint("lg")) {
      .full-size-nav {
        display: none;
      }
      padding: 20px 30px;
      .margin-toggle {
        margin-bottom: 0 !important;
        margin-top: $space_xs - 3;
      }
      .mobile-popover-nav {
        display: block;
      }
    }
  }

  &--content {
    min-height: calc(100vh - 89px);
    @include break_at(breakpoint("lg")) {
      grid-template-columns: auto !important;
    }
    &--main {
      flex-grow: 1;
      padding: 40px 60px;
      height: calc(100vh - 89px);
      overflow: auto;
      @include break_at(breakpoint("lg")) {
        padding: $space-lg $space-xl;
      }
      &.dark{
        background: #0a0527;
      }
    }
  }
  &--hamburger, &--checkbox {
    position: absolute;
    right: $space-xl;
    top: 30px;
    display: none;
    font-size: $space-xl;
    width: 30px;
    height: 30px;
    color: $primary;
    cursor: pointer;
    @include break_at(breakpoint("lg")) {
      display: block;
    }
  }
  &--checkbox {
    opacity: 0;
     ~ #{$selector}--sideNav {
      @include break_at(breakpoint("lg")) {
        position: absolute;
        transform-origin: 0% 0%;
        transform: translate(100%, 0);
        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
        border-radius: $border_rad_heavier;
        box-shadow: $shadow_deepest;
        top: 100px;
        right: 0;
        width: auto !important;
        z-index: 1000;
      }
    }
    &:checked ~ #{$selector}--sideNav {
      @include break_at(breakpoint("lg")) {
        transform: translate(-10%, 0);
      }
    }
  }

  &--sideNav {
    height: calc(100vh - 89px);
    overflow: auto;
    .category_section {
      &.active {
        padding: $space_xs 0;
        background: $bg_light;
      }
      .sub_category {
        padding-left: $space_md;
      }
    }
    &[class*=dark]{
      border-color:$border_dark;
    }
    .mobile-sidebar-pages {
      display: none;
    }
    @include break_at(breakpoint("lg")) {
      .mobile-sidebar-pages {
        display: block;
      }
    }
  }
}
#toggle-modes{
    display: flex;
    margin-right: 80px;
}
// Nav Tabs switch between Rails and React
.pb--kit-type-nav {
  margin: 20px 0 30px;
  line-height: 34px;
  border-bottom: 2px solid rgba($border_light, 0.6);

  &.sample {
    margin: 0;
    border-bottom: 2px solid rgba(228, 232, 240, 0.6);
    background: rgb(23, 34, 87) !important;
  }

  a {
    padding: 0 10px;
    line-height: 34px;
    font-size: 14px;
    font-weight: 400;
    display: inline-block;
    position: relative;

    &::after {
      content: "";
      width: 100%;
      height: 3px;
      background: transparent;
      position: absolute;
      bottom: -2px;
      left: 0;
      border-radius: 1px;
      transition: all 0.2s ease;
    }

    &.active {
      font-weight: 600;

      &::after {
        background: $primary;
      }
    }
  }
}

